# libchibi

./: Cargo.toml  README.md  build.rs
src/: chibihash64.c  lib.rs
