[package]
name = "libchibi"
authors = ["Crypdoughdoteth"]
version = "0.1.0"
edition = "2021"
description = "Safe FFI wrapper for Chibihash64 by N-R-K. Chibihash64 is a small, fast, and portable 64 bit non-cryptographic hash function."
license = "MIT"
repository = "https://github.com/crypdoughdoteth/libchibi/"


[dependencies]
libc = "0.2.164"

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
opt-level = 3            
lto = true
rustflags = ["-C", "target-f=+crt-static"]

